# kelan

./: .dockerignore  .env.example  AUDIT_REPORT.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  agentbound_audit.jsonl  agentbound_behavior_index.json  antigravity.json  docs.md  fix_tests.py  gemini-extension.json  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  installation-issue.md  🐞-bug-report.md
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  secret-guard.yml
docs/: chatgpt-submission.md
grok-plugin/: plugin.json
grok-plugin/skills/kelan-agentbound/: SKILL.md
kelan/: config.py  server.py
kelan-agentbound-mcp/: server.py
kelan-agentbound-plugin/: mcp_config.json
kelan-agentbound-plugin/.claude-plugin/: marketplace.json  plugin.json
kelan-agentbound-plugin/hooks/: hooks.json
kelan-agentbound-plugin/plugin/agents/: agentbound-monitor.md
kelan-agentbound-plugin/plugin/mcp/: server.py
kelan-agentbound-plugin/plugin/skills/kelan-agentbound/: SKILL.md
kelan-ebpf/kelan-ebpf-loader/: Cargo.toml
kelan-ebpf/kelan-ebpf-loader/src/: lib.rs  linux.rs  userspace.rs
kelan-ebpf/kelan-ebpf-program/src/: main.rs
kelan-python/: requirements-dev.txt  requirements.txt
kelan-python/kelan/ai/: engine.py
kelan-python/kelan/enforcement/: ebpf_bridge.py
kelan-python/kelan/server/: main.py
kelan-python/scripts/: enroll_client.py  run_attacks.py  verify_ollama.py
kelan-python/tests/: test_kelan.py
kelan/agentbound/: __init__.py  behavior_engine.py  behavior_index.py  cli.py  compliance_export.py  intent_extractor.py  skill_loader.py
kelan/ai/: engine.py  ollama_client.py
kelan/api/: server.py
kelan/db/: database.py  models.py
kelan/protocol/: crypto.py  handshake.py
kelan/sentinel/: detector.py
kelan/tests/integration/: test_api.py
kelan/tests/unit/: test_agentbound_cli.py  test_api_server.py  test_behavior_engine.py  test_behavior_index.py  test_compliance_export.py  test_crypto_identity.py  test_engine.py  test_handshake.py  test_intent_extractor.py  test_mcp_server.py  test_ollama_client.py  test_ollama_parser.py  test_sentinel.py
plugins/kelan-agentbound/: mcp_config.json  plugin.json
plugins/kelan-agentbound/.claude-plugin/: plugin.json
plugins/kelan-agentbound/skills/monitor/: SKILL.md
scripts/: kelan_verify.sh  run_attacks.py  start_server.py  verify_ollama.py  verify_python.sh
skills/kelan-agentbound/: SKILL.md
