[package]
name    = "kelan-ebpf-loader"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio             = { version = "1", features = ["full"] }
tracing           = "0.1"
anyhow            = "1"
thiserror         = "1"
async-trait       = "0.1"
pqcrypto-mldsa   = { workspace = true }
pqcrypto-mlkem   = { workspace = true }
pqcrypto-traits  = { workspace = true }
ed25519-dalek    = { workspace = true }
x25519-dalek     = { workspace = true }
sha2             = { workspace = true }
sha3             = { workspace = true }
rand             = { workspace = true }
zeroize          = { workspace = true }
# Userspace software-enforcement deps — compiled on ALL platforms
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
crossbeam-channel = "0.5"
dashmap           = "5.5"
governor          = "0.8"
pcap              = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya         = { version = "0.11", features = ["async_tokio"] }
aya-log     = "0.1"
aya-obj     = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
ebpf-native = []

